--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!-- The zip filename needs to include the assignment number and your lab group number, for example "assign1-lab145.zip" -->
+<!-- Don't use bold text!!! -->
 
 <!-- Add alts to images -->
 <!-- Section headings -->
@@ -34,7 +35,6 @@
     <section id="featured">
       <h2>Featured</h2>
       <div>
-<<<<<<< HEAD
         <form method="POST" action="https://wt.ops.labs.vu.nl/api21/e502cf1e">
           <table>
             <caption>Products</caption>
@@ -72,45 +72,6 @@
                 <img src="https://static-images.jumbo.com/product_images/300720202255_159052CUP-1_360x360.png" alt="Noodles">
               </td>
             </tr>
-=======
-        <table>
-          <caption>Featured Products</caption>
-          <tr>
-            <th>Product</th>
-            <th>Origin</th>
-            <th>Best before date</th>
-            <th>Amount</th>
-            <th>Image</th>
-          </tr>
-          <tr>
-            <td>ТОВАРИЩ!</td>
-            <td>Russia</td>
-            <td>23 Nov 2023</td>
-            <td>75</td>
-            <td>
-              <img src="https://static.wixstatic.com/media/391720_66b8aa3a1f694aeaa2911cafd280349c.png" alt="Vodka photo">
-            </td>
-          </tr>
-          <tr>
-            <td>Potatoes</td>
-            <td>Poland</td>
-            <td>20 Jan 2021</td>
-            <td>120</td>
-            <td>
-              <img src="https://assets.bonappetit.com/photos/5d7284758d926f0009df5cfc/5:4/w_3165,h_2532,c_limit/Basically-Gojuchang-Chicken-Potato.jpg" alt="Potatoes photo">
-            </td>
-          </tr>
-          <tr>
-            <td>Noodles</td>
-            <td>Vietnam</td>
-            <td>22 Jun 2022</td>
-            <td>23</td>
-            <td>
-              <img src="https://static-images.jumbo.com/product_images/300720202255_159052CUP-1_360x360.png" alt="Noodles photo">
-            </td>
-          </tr>
-          <form method="POST" action="https://wt.ops.labs.vu.nl/api21/e502cf1e">
->>>>>>> fe06fd96eece4372f14f0cc7e78cc772ec410e15
             <tr>
               <td><input name="product" id="product" type="text" required></td>
               <td><input name="origin" id="origin" type="text" required></td>
