--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
-<!-- The zip filename needs to include the assignment number and your lab group number, for example "assign1-lab145.zip" -->
-<!-- Don't use bold text!!! -->
-
-<!-- Add alts to images -->
-<!-- Section headings -->
-
+<!-- Compatibility report: none of the tags/properties used are not supported by most commonly used browsers -->
+<!-- @media report: website is adjusted to mobile viewing as well as printing -->
 
 <!DOCTYPE html>
 <html lang="en">
