--- a/index.html
+++ b/index.html
@@ -131,14 +131,14 @@
           <p>But did you know Bedrunka also sells recipes?</p> 
           <p>We have some great homemade dishes you can try out:</p>
           <dl>
-            <dt>ТОВАРИЩ!</dt>
-            <dd>Very tasty Vodka</dd>
-            <dt>ТОВАРИЩ!</dt>
-            <dd>Very tasty Vodka</dd>
-            <dt>ТОВАРИЩ!</dt>
-            <dd>Very tasty Vodka</dd>
-            <dt>ТОВАРИЩ!</dt>
-            <dd>Very tasty Vodka</dd>
+            <dt>Wodzionka</dt>
+            <dd>Easy to prepare soup (probably you do not even have to store for ingredients)</dd>
+            <dt>Pierogi</dt>
+            <dd>Tasty dumplings</dd>
+            <dt>Barszcz</dt>
+            <dd>Christmas spirit in a soup</dd>
+            <dt>Bigos</dt>
+            <dd>Mishmash of Polish taste</dd>
           </dl>
           <p>And here is how you prepare Soba Noodles:</p>
           <h4>Steps</h4>
