--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!-- The zip filename needs to include the assignment number and your lab group number, for example "assign1-lab145.zip" -->
-<!-- Don't use bold text!!! -->
-
-<!-- Add alts to images -->
-<!-- Section headings -->
-
 
 <!DOCTYPE html>
 <html lang="en">
@@ -26,7 +21,7 @@
           <li><a href="#">Home</a></li>
           <li><a href="#featured">Featured</a></li>
           <li><a href="#employees">Employees</a></li>
-          <li><a href="#about">About</a></li>
+          <li><a href="#recipes">Recipes</a></li>
         </ul>
       </nav>
     </header>
