--- a/index.html
+++ b/index.html
@@ -1,10 +1,25 @@
-<!-- Compatibility report: none of the tags/properties used are not supported by most commonly used browsers -->
+<!--  To test, use Google Chrome and at least one other browser. Report especially on how you tested the "Print" style and the tests of the different screen sizes. Also report on HTML5 and CSS constructs in your submission that work or worked differently in different browsers. If you took explicit measures to make something work well across multiple browsers, please indicate this explicitly (good examples may be awarded max 5 bonus points). -->
+
+<!-- 
+  Compatibility report: 
+  none of the tags/properties used are not supported by most commonly used browsers -->
 <!-- @media report: website is adjusted to mobile viewing as well as printing -->
+
+<!-- 
+  TODO: 
+  * list-style-image
+  * float
+  * print layout
+  * class
+  * test browsers
+  * validate HTML/CSS 
+-->
 
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <title>Store - Bedrunka</title>
+    
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -84,6 +99,7 @@
       </div>
     </section>
 
+    <!-- Does it need a form? -->
     <section id="employees">
       <h2>Employees of the Year</h2>      
       <div>
@@ -150,17 +166,24 @@
           </ol>
         </div>
         <pre>
-                (\
-                \ \p
-            __    \/ ___,.-------..__        __
-          //\\ _,-'\\               `'--._ //\\
-          \\ ;'      \\                   `: //
-            `(          \\                   )'
-              :.          \\,----,         ,;
-              `.`--.___   (    /  ___.--','
-                `.     ``-----'-''     ,'
-                    -.               ,-
-                <abbr>gpyy</abbr>  `-._______.-'
+          \     \
+          /      /
+                  \
+            \       /
+       ___________________
+       \_________________/
+        |               |  .---.
+        |===============| /    |
+        |               |/ .'| |
+        |               | | .' |
+        |               | |'  .'
+        |               |   .'
+        |               | .'
+        |===============|'
+        |               |
+        |_______________| <abbr>mga</abbr>
+         \             /
+          '-.........-'
         </pre>
       </div>
     </section>
@@ -170,7 +193,7 @@
         <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.forum-betrieb.de%2Fimages%2Fforumbetrieb%2Fbedrunka-hirth_logo_2018.jpg&f=1&nofb=1" alt="parent company">
         <figcaption>Our parent company</figcaption>
       </figure>
-      <p>Copyright &copy; 2020 bedrunka+hirth</p>
+      <p>Copyright &copy; 2021 bedrunka+hirth</p>
     </footer>
   </body>
 </html>
