--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
 
 <!-- 
   TODO: 
-  * print layout
-  * vertical-align: middle
   * test browsers
   * validate HTML/CSS
 -->
@@ -102,7 +100,7 @@
       <h2 class="table-header">Employees of the Year</h2>      
       <div>
         <table>
-          <caption>Thanks everyone for working at this amazing company!</caption>
+          <caption>Thanks everyone for working at this amazing supermarket!</caption>
           <tr>
             <th>Name</th>
             <th>Month</th>
@@ -168,7 +166,7 @@
             <li>My mom told me I need to make food more often, so I made these all by myself!!!</li>
           </ul>
         </div>
-        <pre>
+        <pre class="ascii">
           \     \
           /      /
                   \
