--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
-<!--  To test, use Google Chrome and at least one other browser. Report especially on how you tested the "Print" style and the tests of the different screen sizes. Also report on HTML5 and CSS constructs in your submission that work or worked differently in different browsers. If you took explicit measures to make something work well across multiple browsers, please indicate this explicitly (good examples may be awarded max 5 bonus points). -->
-
 <!-- 
   Compatibility report: 
-  none of the tags/properties used are not supported by most commonly used browsers -->
-<!-- @media report: website is adjusted to mobile viewing as well as printing -->
-
+  none of the tags/properties used are not supported by most commonly used browsers
+  all functionalities work correctly, some may be handicapped due to privacy settings of the user, but by default
+  everything works correctly on: Google Chrome, Opera, Microsoft Edge, Internet Explorer, Firefox
+-->
 <!-- 
-  TODO: 
-  * test browsers
-  * validate HTML/CSS
+  @media report: website is adjusted to mobile viewing as well as printing 
+-->
+<!--
+  HTML and CSS validation went correctly, no errors or warnings using W3 validators
 -->
 
 <!DOCTYPE html>
