--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
   Compatibility report: 
   none of the tags/properties used are not supported by most commonly used browsers
   all functionalities work correctly, some may be handicapped due to privacy settings of the user, but by default
-  everything works correctly on: Google Chrome, Opera, Microsoft Edge, Internet Explorer, Firefox
+  everything works correctly on: Google Chrome, Opera, Microsoft Edge, Firefox
+  Internet Explorer does not support date picker or the number input
 -->
 <!-- 
   @media report: website is adjusted to mobile viewing as well as printing 
