--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
   Compatibility report: 
   none of the tags/properties used are not supported by most commonly used browsers
   all functionalities work correctly, some may be handicapped due to privacy settings of the user, but by default
-  everything works correctly on: Google Chrome, Opera, Microsoft Edge, Firefox, Safari
+  everything works correctly on: Google Chrome, Opera, Microsoft Edge, Firefox
   Internet Explorer does not support date picker or the number input
+  Safari does not support date picker
 -->
 <!-- 
   @media report: website is adjusted to mobile viewing as well as printing 
