--- a/index.html
+++ b/index.html
@@ -1,16 +1,38 @@
 <!-- 
-  Compatibility report: 
-  none of the tags/properties used are not supported by most commonly used browsers
-  all functionalities work correctly, some may be handicapped due to privacy settings of the user, but by default
-  everything works correctly on: Google Chrome, Opera, Microsoft Edge, Firefox
-  Internet Explorer does not support date picker or the number input
-  Safari does not support date picker
--->
-<!-- 
+  === Compatibility report ===
+
+  Google Chrome:
+    - No problems
+
+  Microsoft Edge
+    - No problems
+
+  Mozilla Firefox:
+    - Text is a bit thicker compared to other browsers
+    - Date picker icon is not displayed
+    - <input type="month"> is not supported (hence we use type="date")
+  
+  Internet Explorer
+    - Datepicker is not supported
+    - Numberpicker is not supported
+  
+  Opera:
+    - ASCII art is a bit smaller
+
+  Apple Safari
+    - Datepicker doesn't work
+  
+  Firefox (mobile)
+    - Arrows on numberpicker are hard to touch
+
+  Some functionality may be handicapped due to privacy settings of the user.
+
   @media report: website is adjusted to mobile viewing as well as printing 
--->
-<!--
+
   HTML and CSS validation went correctly, no errors or warnings using W3 validators
+
+  
+  Made with love by Group 7
 -->
 
 <!DOCTYPE html>
