--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <form method="POST" action="https://wt.ops.labs.vu.nl/api21/e502cf1e">
           <table>            
             <tr>
-              <th>Product</th>
+              <th onclick="sortByColumn(0)">Product</th>
               <th>Origin</th>
               <th>Best before date</th>
               <th>Amount</th>
