--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
               <th>Image</th>
             </tr>
             <tr>
-              <td>Tovarish!</td>
+              <td>CTovarish!</td>
               <td>Russia</td>
               <td>23 Nov 2023</td>
               <td>75</td>
@@ -92,7 +92,7 @@
               </td>
             </tr>
             <tr>
-              <td>Potatoes</td>
+              <td>APotatoes</td>
               <td>Poland</td>
               <td>20 Jan 2021</td>
               <td>120</td>
@@ -101,7 +101,7 @@
               </td>
             </tr>
             <tr>
-              <td>Noodles</td>
+              <td>BNoodles</td>
               <td>Vietnam</td>
               <td>22 Jun 2022</td>
               <td>23</td>
