--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <img src="https://static-images.jumbo.com/product_images/300720202255_159052CUP-1_360x360.png" alt="Noodles">
               </td>
             </tr>
-            <tr>
+            <tr id="inputrow">
               <td><input name="product" id="product" type="text" required></td>
               <td><input name="origin" id="origin" type="text" required></td>
               <td><input name="best_before_date" id="best_before_date" type="date" required></td>
