--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
           <table>            
             <tr>
               <th onclick="sortByColumn(0)">Product</th>
-              <th>Origin</th>
-              <th>Best before date</th>
-              <th>Amount</th>
+              <th onclick="sortByColumn(1)">Origin</th>
+              <th onclick="sortByColumn(2)">Best before date</th>
+              <th onclick="sortByColumn(3)">Amount</th>
               <th>Image</th>
             </tr>
             <tr>
