--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <h2 class='table-header'>Featured Products</h2>
       <div>
         <form method="POST" action="https://wt.ops.labs.vu.nl/api21/e502cf1e">
-          <table>            
+          <table id="t1">            
             <tr>
               <th onclick="sortByColumn(0)">Product</th>
               <th onclick="sortByColumn(1)">Origin</th>
@@ -94,6 +94,24 @@
             <tr>
               <td>Potatoes</td>
               <td>Poland</td>
+              <td>20 Jan 2021</td>
+              <td>120</td>
+              <td>
+                <img src="https://assets.bonappetit.com/photos/5d7284758d926f0009df5cfc/5:4/w_3165,h_2532,c_limit/Basically-Gojuchang-Chicken-Potato.jpg" alt="Potatoes">
+              </td>
+            </tr>
+            <tr>
+              <td>Apple Pie</td>
+              <td>Netherlands</td>
+              <td>20 Jan 2021</td>
+              <td>120</td>
+              <td>
+                <img src="https://assets.bonappetit.com/photos/5d7284758d926f0009df5cfc/5:4/w_3165,h_2532,c_limit/Basically-Gojuchang-Chicken-Potato.jpg" alt="Potatoes">
+              </td>
+            </tr>
+            <tr>
+              <td>Cake</td>
+              <td>Netherlands</td>
               <td>20 Jan 2021</td>
               <td>120</td>
               <td>
