--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <h2 class='table-header'>Featured Products</h2>
       <div>
         <form method="POST" action="https://wt.ops.labs.vu.nl/api21/e502cf1e">
-          <table id="t1">            
+          <table id="table-featured">            
             <tr>
               <th onclick="sortByColumn(0)">Product</th>
               <th onclick="sortByColumn(1)">Origin</th>
@@ -148,7 +148,7 @@
     <section id="employees">
       <h2 class="table-header">Employees of the Year</h2>      
       <div>
-        <table>
+        <table id="table-employees">
           <caption>Thanks everyone for working at this amazing supermarket!</caption>
           <tr>
             <th>Name</th>
