--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
         <form method="POST" action="https://wt.ops.labs.vu.nl/api21/e502cf1e">
           <table id="table-featured">            
             <tr>
-              <th onclick="sortByColumn(0)">Product</th>
-              <th onclick="sortByColumn(1)">Origin</th>
-              <th onclick="sortByColumn(2)">Best before date</th>
-              <th onclick="sortByColumn(3)">Amount</th>
+              <th>Product</th>
+              <th>Origin</th>
+              <th>Best before date</th>
+              <th>Amount</th>
               <th>Image</th>
             </tr>
             <tr>
@@ -165,7 +165,7 @@
             </td>
           </tr>
           <tr>
-            <td>Andrzej</td>
+            <td>Ondrzej</td>
             <td>December, 2020</td>
             <td>3</td>
             <td>
