--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             </td>
           </tr>
           <tr>
-            <td>Ondrzej</td>
+            <td>Andrzej</td>
             <td>December, 2020</td>
             <td>3</td>
             <td>
