--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <h2 class='table-header'>Featured Products</h2>
       <div>
         <form method="POST" action="https://wt.ops.labs.vu.nl/api21/e502cf1e">
-          <table id="table-featured">            
+          <table>            
             <tr>
               <th>Product</th>
               <th>Origin</th>
@@ -127,7 +127,7 @@
                 <img src="https://static-images.jumbo.com/product_images/300720202255_159052CUP-1_360x360.png" alt="Noodles">
               </td>
             </tr>
-            <tr id="inputrow">
+            <tr>
               <td><input name="product" id="product" type="text" required></td>
               <td><input name="origin" id="origin" type="text" required></td>
               <td><input name="best_before_date" id="best_before_date" type="date" required></td>
@@ -148,7 +148,7 @@
     <section id="employees">
       <h2 class="table-header">Employees of the Year</h2>      
       <div>
-        <table id="table-employees">
+        <table>
           <caption>Thanks everyone for working at this amazing supermarket!</caption>
           <tr>
             <th>Name</th>
