--- a/index.html
+++ b/index.html
@@ -43,14 +43,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
 
     <script
       src="https://code.jquery.com/jquery-3.5.1.min.js"
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
       crossorigin="anonymous"></script>
 
-    <script src="table.js"></script>
+    <!--<script src="./js/populate.js"></script>-->
+    <script src="./js/table.js"></script>
+    <script src="./js/reset.js"></script>
   </head>
 
   <body>
@@ -74,7 +76,7 @@
       <h2 class='table-header'>Featured Products</h2>
       <div>
         <form method="POST" action="https://wt.ops.labs.vu.nl/api21/e502cf1e">
-          <table>            
+          <table id="table-featured">            
             <tr>
               <th>Product</th>
               <th>Origin</th>
@@ -140,6 +142,7 @@
               </td>
             </tr>
           </table>
+          <div class="btn-reset" onclick="resetTable()">Reset Data</div>
         </form>
       </div>
     </section>
