--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
               </td>
             </tr>
           </table>
-          <div class="btn-reset" onclick="resetTable()">Reset Data</div>
+          <div class="btn-reset" onclick="resetTable()">Reset Data</div> <!--TODO: no onclick-->
         </form>
       </div>
     </section>
