--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             </tbody>
           </table>
           <button type="submit">Add Product</button>
-          <div class="btn-reset" onclick="resetTable()">Reset Data</div>
+          <div class="btn-reset" onclick="resetTable()">Reset Data</div> <!--TODO: remove onclick use eventlistener-->
         </form>
       </div>
     </section>
