--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </script>
 
     <!--<script src="./js/table.js"></script>-->
-    <script src="./sorter.js"></script>
+    <script src="./js/sorter.js"></script>
     <script src="./js/reset.js"></script>
   </head>
 
