--- a/index.html
+++ b/index.html
@@ -51,13 +51,12 @@
       crossorigin="anonymous">
     </script>
 
-    <!--<script src="./js/populate.js"></script>-->
+    <script src="./js/populate.js"></script>
     <script 
       type="text/javascript" 
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.31.3/js/jquery.tablesorter.min.js">
     </script>
 
-    <!--<script src="./js/table.js"></script>-->
     <script src="./sorter.js"></script>
     <script src="./js/reset.js"></script>
   </head>
@@ -94,7 +93,7 @@
               </tr>
             </thead>
             <tbody>
-              <tr>
+              <!--<tr>
                 <td>Tovarish!</td>
                 <td>Russia</td>
                 <td>November 2023</td>
@@ -145,7 +144,7 @@
                 <td><input name="best_before_date" id="best_before_date" type="date" required></td>
                 <td><input name="amount" id="amount" type="number" min="0" required></td>
                 <td><input name="image" id="image" type="url" required></td>
-              </tr>
+              </tr>-->
             </tbody>
           </table>
           <button type="submit">Add Product</button>
