--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.31.3/js/jquery.tablesorter.min.js">
     </script>
 
-    <script src="./sorter.js"></script>
+    <script src="./js/sorter.js"></script>
     <script src="./js/reset.js"></script>
   </head>
 
