--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
       crossorigin="anonymous">
     </script>
 
-    <script src="./js/populate.js"></script>
     <script 
       type="text/javascript" 
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.31.3/js/jquery.tablesorter.min.js">
     </script>
 
-    <script src="./sorter.js"></script>
+    <script src="./js/sorter.js"></script>
+    <script src="./js/populate.js"></script>
     <script src="./js/reset.js"></script>
   </head>
 
@@ -93,58 +93,13 @@
               </tr>
             </thead>
             <tbody>
-              <!--<tr>
-                <td>Tovarish!</td>
-                <td>Russia</td>
-                <td>November 2023</td>
-                <td>75</td>
-                <td>
-                  <img src="https://static.wixstatic.com/media/391720_66b8aa3a1f694aeaa2911cafd280349c.png" alt="ТОВАРИЩ">
-                </td>
-              </tr>
-              <tr>
-                <td>Potatoes</td>
-                <td>Poland</td>
-                <td>January 2021</td>
-                <td>120</td>
-                <td>
-                  <img src="https://assets.bonappetit.com/photos/5d7284758d926f0009df5cfc/5:4/w_3165,h_2532,c_limit/Basically-Gojuchang-Chicken-Potato.jpg" alt="Potatoes">
-                </td>
-              </tr>
-              <tr>
-                <td>Apple Pie</td>
-                <td>Netherlands</td>
-                <td>January 2021</td>
-                <td>120</td>
-                <td>
-                  <img src="https://assets.bonappetit.com/photos/5d7284758d926f0009df5cfc/5:4/w_3165,h_2532,c_limit/Basically-Gojuchang-Chicken-Potato.jpg" alt="Potatoes">
-                </td>
-              </tr>
-              <tr>
-                <td>Cake</td>
-                <td>Netherlands</td>
-                <td>January 2023</td>
-                <td>120</td>
-                <td>
-                  <img src="https://assets.bonappetit.com/photos/5d7284758d926f0009df5cfc/5:4/w_3165,h_2532,c_limit/Basically-Gojuchang-Chicken-Potato.jpg" alt="Potatoes">
-                </td>
-              </tr>
-              <tr>
-                <td>Noodles</td>
-                <td>Vietnam</td>
-                <td>June 2022</td>
-                <td>23</td>
-                <td>
-                  <img src="https://static-images.jumbo.com/product_images/300720202255_159052CUP-1_360x360.png" alt="Noodles">
-                </td>
-              </tr>
               <tr>
                 <td><input name="product" id="product" type="text" required></td>
                 <td><input name="origin" id="origin" type="text" required></td>
                 <td><input name="best_before_date" id="best_before_date" type="date" required></td>
                 <td><input name="amount" id="amount" type="number" min="0" required></td>
                 <td><input name="image" id="image" type="url" required></td>
-              </tr>-->
+              </tr>
             </tbody>
           </table>
           <button type="submit">Add Product</button>
