--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
               </tr>
             </tbody>
           </table>
+          <!-- Add update -->
           <button type="submit">Add Product</button>
           <div class="btn-reset" onclick="resetTable()">Reset Data</div> <!--TODO: remove onclick use eventlistener-->
         </form>
