--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
               </tr>
             </tbody>
           </table>
-          <!-- Add update -->
-          <button type="submit">Add Product</button>
+                                                    <!-- TODO: Add update -->
+          <button type="submit">Add Product</button> <!--TODO: ask if the table should be sorted as it loads for the first time eg by Product-->
           <div class="btn-reset" onclick="resetTable()">Reset Data</div> <!--TODO: remove onclick use eventlistener-->
         </form>
       </div>
