--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
               </tr>
             </tbody>
           </table>
-                                                    <!-- TODO: Add update -->
+                                                    <!-- TODO: Add update of table after task 4 done-->
           <button type="submit">Add Product</button> <!--TODO: ask if the table should be sorted as it loads for the first time eg by Product-->
           <div class="btn-reset" onclick="resetTable()">Reset Data</div> <!--TODO: remove onclick use eventlistener-->
         </form>
