doesnt work but some basis is there

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
     <script src="./js/sorter.js"></script>
     <script src="./js/populate.js"></script>
     <script src="./js/reset.js"></script>
+    <script src="./js/form_sub.js"></script>
   </head>
 
   <body>
