--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             </tbody>
           </table>
                                                     <!-- TODO: Add update of table after task 4 done-->
-          <button type="submit">Add Product</button> <!--TODO: ask if the table should be sorted as it loads for the first time eg by Product-->
+          <button type="submit">Add Product</button>
           <div class="btn-reset" onclick="resetTable()">Reset Data</div> <!--TODO: remove onclick use eventlistener-->
         </form>
       </div>
