reset click listener

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           </table>
                                                     <!-- TODO: Add update of table after task 4 done-->
           <button type="submit">Add Product</button>
-          <div class="btn-reset" onclick="resetTable()">Reset Data</div> <!--TODO: remove onclick use eventlistener-->
+          <div class="btn-reset">Reset Data</div> <!--TODO: remove onclick use eventlistener-->
         </form>
       </div>
     </section>
