--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./style.css">
 
     <script
       src="https://code.jquery.com/jquery-3.5.1.min.js"
