--- a/index.html
+++ b/index.html
@@ -56,10 +56,7 @@
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.31.3/js/jquery.tablesorter.min.js">
     </script>
 
-    <script src="./js/sorter.js"></script>
-    <script src="./js/populate.js"></script>
-    <script src="./js/reset.js"></script>
-    <script src="./js/form_sub.js"></script>
+    <script src="./scripts.js"></script>
   </head>
 
   <body>
